--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mapa de Gentrificación: El 'Specialty Coffee' como Indicador Urbano</title>
+    <meta name="author" content="Edgar González">
+    <meta name="description" content="Café Espacialidad: Mapa Crítico de Gentrificación en Madrid">
+    <link rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    <title>Café Espacialidad | Mapa de Gentrificación Madrid</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
