--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <!-- Botón de Colaboración -->
         <div style="margin: 25px 0;">
-            <a href="https://forms.gle/TU_LINK_GOOGLE_FORM" target="_blank" 
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeray-H1bqzE2wqAoZJiqNIp0CTLIfpx2LFptWm9_rVgLH6wA/viewform?usp=dialog" target="_blank" 
                style="display: inline-block; background-color: #e74c3c; color: white; 
                       padding: 12px 30px; border-radius: 25px; text-decoration: none; 
                       font-weight: bold; font-size: 0.95em; transition: all 0.3s;">
